force-app/main/default/objects/Fielo_sticking_code__c/Fielo_sticking_code__c.object-meta.xml
<CustomObject>
    <label>Sticking Code</label>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>sticking codes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sticking Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>