force-app/main/default/objects/Fielo_sticking_code__c/fields/Fielo_Barcode__c.field-meta.xml
<CustomField>
    <fullName>Fielo_Barcode__c</fullName>
    <label>Barcode</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>